--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,3 +21,32 @@
     width: 200px;
     height: 200px;
 }
+
+#video-bg-home{
+    position: fixed;
+    top:50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    opacity: 0.9;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -o-transform: translateX(-50%) translateY(-50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -10;
+    background: url('/src/video/solo.jpg') no-repeat;
+    background-size: cover;
+}
+
+#home-overlay{
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -9;
+}
