--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,33 @@
+/*
+    Colors: 
+        Moon Yellow:        #f4c613
+        Grey:               #212225
+        White Smoke:        #f4f4f4
+        White:              #fff
+        Black:              #000
 
+*/
+
+
+html, body{
+    height: 100%;
+}
+body{
+    color: #212228;
+}
+h1,h2,h3,h4,h5,h6{
+    font-family: "Raleway", sans-serif;
+}
+p {
+    font-family: "Open Sans", sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 24px;
+}
+section{
+    background: #fff;
+    overflow: hidden;
+}
 
 #preloader {
     position: fixed;
@@ -22,12 +51,15 @@
     height: 200px;
 }
 
+#home {
+    background: none;
+    height: 100%;
+}
 #video-bg-home{
     position: fixed;
     top:50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    opacity: 0.9;
     -webkit-transform: translateX(-50%) translateY(-50%);
     -moz-transform: translateX(-50%) translateY(-50%);
     -ms-transform: translateX(-50%) translateY(-50%);
@@ -48,5 +80,80 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: -9;
+    z-index: -10;
+}
+
+#home-content{
+    width: 100%;
+    height: 100%;
+    display: table;
+}
+
+#home-content-inner{
+    display: table-cell;
+    vertical-align: middle;
+}
+#home-heading h1{
+    color: #fff;
+    font-size: 50px;
+    font-weight: 100;
+    text-transform: uppercase;
+    margin: 0;
+    display: inline-block;
+}
+#home-heading h1 span{
+    color:#f4c613;
+    font-weight: 500;
+} 
+#home-text p{
+    color:#fff;
+    font-size: 17px;
+    font-weight: 100;
+    margin: 8px 0 30px 0;
+}
+
+/* Button */
+.btn-general{
+    font-family: 'Raleway', sans-serif;
+    font-size: 13px;
+    text-transform: uppercase;
+    margin: 0 6px;
+    padding: 12px 46px 12px 46px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+.btn-home{
+    color: #fff;
+    border: 1px solid #fff;
+}
+.btn-home:hover, .btn-home:focus{
+    color: #fff;
+    background-color: #f4c613;
+    border: 1px solid #f4c613;
+}
+
+/* Arrow Down */
+#arrow-down{
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    color: #fff;
+    font-size: 32px;
+    width: 32px;
+    height: 32px;
+    text-align: center;
+    margin-left: -16px;
+    z-index: 1;
+}
+
+#arrow-down:hover, #arrow-down:focus{
+    color: #f4c613;
 }
