--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,7 +36,7 @@ section{
     left: 0;
     bottom: 0%;
     z-index: 99999;
-    background-color: lightblue;
+    background-color: #fff;
 }
 
 #spinner{
@@ -156,4 +156,34 @@ section{
 
 #arrow-down:hover, #arrow-down:focus{
     color: #f4c613;
+}
+
+
+/* About Section */
+.content-box-lg {
+    padding: 120px 0;
+}
+
+.vertical-heading h5 {
+    color: #f4c613;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    word-spacing: 10px;
+    display: inline-block;
+    transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    position: relative;
+    top: 60px;
+    left: -60px;
+}
+
+.vertical-heading h2 {
+    margin: 0 0 0 35px;
+    font-size: 42px;
+    font-weight: 100;
+    line-height: 45px;
 }
