--- a/src/css/style.css
+++ b/src/css/style.css
@@ -159,10 +159,18 @@ section{
 }
 
 
-/* About Section */
+/******* About Section 1 *******/
+
+/********* Boxes *********/
 .content-box-lg {
     padding: 120px 0;
 }
+
+
+.content-box-md{
+    padding: 100px 0;
+}
+/*************************/
 
 .vertical-heading h5 {
     color: #f4c613;
@@ -199,3 +207,70 @@ section{
 #about-bottom img{
     margin: 0 auto;
 }
+
+/******* About Section 2 *******/
+#about-p2{
+    background-color: #f4f4f4;
+}
+
+.about-item{
+    background-color: #fff;
+    padding: 80px 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.about-item i{
+    font-size: 32px;
+    margin-bottom: 10px;
+}
+.about-item h3{
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+.about-item hr {
+    width: 125px;
+    height: 3px;
+    background-color: #f4c613;
+    margin: auto;
+    border: none;
+}
+.about-item p {
+    margin-top: 20px;
+}
+
+/******* Hover *******/
+.about-item:hover{
+    background-color: #f4c613;
+}
+
+.about-item:hover i, 
+.about-item:hover h3, 
+.about-item:hover p{
+    color: rgb(95, 95, 95);
+}
+
+.about-item:hover hr{
+    background-color: #fff;
+}
+
+.about-item:hover i{
+    transform: translateY(-20px);
+    -webkit-transform: translateY(-20px);
+    -moz-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+    -o-transform: translateY(-20px);
+}
+
+.about-item,
+.about-item i, 
+.about-item h3, 
+.about-item p ,
+.about-item hr{
+    transition: all 400ms ease-in-out;
+    -webkit-transition: all 400ms ease-in-out;
+    -moz-transition: all 400ms ease-in-out;
+    -ms-transition: all 400ms ease-in-out;
+    -o-transition: all 400ms ease-in-out;
+}
+
+/************ End of about sections ************/
